syntax = "proto3";

package api.core.v1.statistic;
import "google/api/annotations.proto";
option go_package = "cwxu-algo/api/core/v1/statistic;statistic";
option java_multiple_files = true;
option java_package = "api.core.v1.statistic";

service Statistic {
  rpc Heatmap(HeatmapReq) returns (HeatmapResp) {
    option (google.api.http) = {
      get: "/v1/core/statistic/heatmap"
    };
  }
  rpc PeriodCount(PeriodCountReq) returns (PeriodCountResp) {
    option (google.api.http) = {
      get: "/v1/core/statistic/period"
    };
  }
  rpc Rank(RankReq) returns (RankResp) {
    option (google.api.http) = {
      get: "/v1/core/statistic/rank"
    };
  }
}

message HeatmapReq {
  int64 userId = 1;
  string startDate = 2;
  string endDate = 3;
  bool isAc = 4;
}

message HeatmapResp {
  message  HeatmapItem {
    string date = 1;
    int64 count = 2;
  }
  int64 code = 1;
  repeated HeatmapItem data = 2;
}

message PeriodCountReq {
  int64 userId = 1;
}

message PeriodCountResp {
  int64 code = 1;
  PeriodData data = 2;
}

message PeriodData {
  SubmitCount submit = 1;
  AcCount ac = 2;
}

message SubmitCount {
  int64 today = 1;
  int64 thisWeek = 2;
  int64 lastWeek = 3;
  int64 thisMonth = 4;
  int64 lastMonth = 5;
  int64 thisYear = 6;
  int64 lastYear = 7;
  int64 total = 8;
}

message AcCount {
  int64 today = 1;
  int64 thisWeek = 2;
  int64 lastWeek = 3;
  int64 thisMonth = 4;
  int64 lastMonth = 5;
  int64 thisYear = 6;
  int64 lastYear = 7;
  int64 total = 8;
}

message RankReq {
  int64 userId = 1;
  string time = 2; // 设置 日 周 月 三个维度
  string scoreType = 4; // scoreType = "ac" 是 AC 排行榜
  int64 groupId = 5; // groupId = -1 时候则是全部
  int64 page = 6;
  int64 pageSize = 7;
}

message RankItem {
  int64 rank = 1; // 排名
  int64 userId = 2;
  string name = 3; // 这是姓名
  int64 score = 4; // 这是统计出来的数量
}

message RankResp {
  int64 code = 1;
  repeated RankItem data = 2;
}
