syntax = "proto3";

package api.user.v1;
import "google/api/annotations.proto";
option go_package = "cwxu-algo/api/user/v1/profile;profile";
option java_multiple_files = true;
option java_package = "api.user.v1";

service Profile {
  rpc GetById (GetByIdReq) returns (GetByIdRes) {
    option (google.api.http) = {
      get: "/v1/user/profile/get-by-id"
    };
  }
  rpc Update (UpdateReq) returns (UpdateRes) {
    option (google.api.http) = {
      post: "/v1/user/profile/update",
      body: "*",
    };
  }
}

message GetByIdReq {
  int64 userId = 1;
}

message GetByIdRes {
  uint64 userId = 1;
  string username = 2;
  string name = 3;
  string email = 4;
  int64 groupId = 5;
  string avatar = 6;
}

message UpdateReq {
  uint64 userId = 1;
  string name = 3;
  string email = 4;
  string avatar = 6;
}

message UpdateRes {
  int64 code = 1;
  string message = 2;
}